--- a/index.html
+++ b/index.html
@@ -3,14 +3,39 @@
   <head>
     <meta charset="uft-8">
     <title>Assignment 1 </title>
+    <style media="screen">
+      body{
+        margin: 50px;
+        text-align:center;
+      }
+      img{
+        margin: 50px 50px 20px 20px
+      }
+    </style>
   </head>
-  <body>
-    <h1>Introduction</h1>
+  <body style="background-color: DarkSeaGreen; font-family: cursive; color: DarkSlateGrey;">
+    <img src="me_image.jpg" alt="me on a rock wall facing out" style="width:360px; height:500px; float:right;">
+    <h1 style="font-size: 50px; color: DarkSlateGrey;">Introduction</h1>
+      <p style="font-size:23px"><strong>Name:</strong> Claire Cheffings</p>
+      <p style="font-size:23px"><strong>Student Number:</strong> S3943096</p>
+      <p style="font-size:23px"><strong>Email Address:</strong> s3943096@student.rmit.edu.au</p>
+      <p style="font-size: 20px">My dad&#39s side of the family is Greek Cypriot so I have the culture in terms of food but I don&#39t know Cypriot Greek and have never been to Cyprus. I would like to visit Greece or Cyprus at some point, Greece especially because there is a unique type of rock in that type of area which makes for amazing climbing. It is made up of limestone rock which has formed tufas which make for incredible routes. There is a specific island in Greece called Kalymnos which is very popular with climbers as it has lots of routes and is small. My dad and sister went there in 2015 and got around on a moped. My mum is from Britain, specifically England but I have family from Scotland too who were part of the Gordon clan. I would like to live in rural Scotland because it seems very nice and if my weird English accent situation could be replaced with Scottish that would be pretty cool I think, plus I can do an okay Scottish accent.
+As I alluded to in the previous paragraph, I like to do rock climbing. I do both lead (tall climbs) and bouldering (short more intense climbs) but I&#39m currently focusing of bouldering because I&#39m in my last year of being able to be be in a youth squad and compete in youth competitions. There&#39s currently a possibility that I could go to youth bouldering nationals this year but it&#39s quite small because I couldn&#39t compete in last year&#39s star titles (the qualifying event) due to an injury.  I don&#39t only find the act of climbing itself enjoyable, but also training for it because it&#39s less scary than going to the proper gym.
+I have a dog names Toffee who is, according to her registration, a Jack Russell Terrier however she is from the pound and like 3 times the size of a Jack Russell. She is currently 12 years old, and she acts like an old lady because she doesn&#39t take nonsense anymore.
+I completed year 12 last year.
+    </p>
+  <h1 style="font-size: 50px; color: DarkSlateGrey;">
+    Interest in IT
+  </h1>
+      <p style="font-size:20px;"> I&#39ve always been curious about technology and wanted to know how things worked but my interest in IT as a career probably started in year 10 and increased in year 11 when I did cybersecurity and coding courses online when I finished my online school work early (surprisingly I actually finished things when I was at home doing online classes alone because I wasn&#39t chatting people the whole time - it&#39s amazing, I know). I&#39m particularly interested in cybersecurity/penetration testing or system administration as a career but I also am interested in developing things. In year 11 I played around a bit with html and css and it didn&#39t turn out completely horrible but it wasn&#39t great.
+I chose RMIT because it is more convenient to access than other universities such a Monash and I didn&#39t even check the commuting time differences because I would prefer 45 minutes on a train over a tram or goodness forbid, having to change busses or something in the middle, even if it only took 20 minutes. I was also attracted to how job-ready RMIT makes its graduates, because from my research it seemed that RMIT is more practical while fancy. Places like Melbourne don&#39t teach the students how to actually do jobs.
+I&#39m not sure yet what IT electives I will chose in the coming semesters, but I think I will start with something to do with security. </p>
+    <h1>Ideal Job</h1>
       <p></p>
-    <h1>Interest in IT</h1>
+    <h1>Personal Profile</h1>
       <p></p>
-    <h1>IT Project</h1>
-      <h2>Introduction</h2>
+    <h1 style="font-size:50px">IT Project</h1>
+      <h2 style="font-size:30px">Introduction</h2>
         <p></p>
       <h2></h2>
 
